# scinotebook

./: .gitignore  README.md  Untitled.ipynb  app.ipynb  function.ipynb  matplotlib styles.ipynb  pandas operate.ipynb  pyproject.toml  python_call_r.ipynb  readme.md  requirements.txt  set plot fonts.ipynb  set_plot_fonts.ipynb  sharpe_ratio.ipynb  tidyquant.ipynb  widgets.ipynb
Finance/: AKShare金融数据.ipynb  China stock.ipynb  Untitled.ipynb  quant.ipynb  quantmod.ipynb  tidyquant.ipynb  上证账户数据.ipynb  技术指标.ipynb  经济数据.ipynb  股票和基金数据.ipynb
ML/: DecisionTreeRegressor.ipynb  HistGradientBoostingRegressor.ipynb  RandomForestRegressor.ipynb  catboost.ipynb  fastai.ipynb  pymc.ipynb  summary.ipynb
ML/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
ML/catboost_info/learn/: events.out.tfevents
ML/catboost_info/test/: events.out.tfevents
Mathematica/: Network request.ipynb
Plot/: box.ipynb  matplotlib.ipynb
Python/: app.ipynb  function.ipynb  pandas operate.ipynb  sqlalchemy engine.ipynb
Python/Sympy/: sympy.ipynb
Python/basic/: Array.ipynb
Python/db/: pandas.ipynb
Python/finance/: fetch data.ipynb  fund.ipynb  stock_filter.ipynb
Scala/: 基本操作.ipynb
Vision/: coco_annotations.json  object-detect.ipynb  qwen3-vl-object-detect.ipynb  qwen3-vl-sam.ipynb  vlm.py
basic/: Array.ipynb
db/: pandas.ipynb
finance/: fetch data.ipynb  fund.ipynb  stock_filter.ipynb
sympy/: sympy.ipynb
