[project]
name = "scinotebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.7.2",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "jupyter-ai>=2.31.4",
    "jupyterlab-git>=0.51.1",
    "langchain-openai>=0.3.19",
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pip>=25.2",
    "plotly>=6.1.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "sympy>=1.14.0",
    "xarray>=2025.4.0",
    "yfinance>=0.2.61",
]
