[project]
name = "scinotebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.7.3",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "jupyter-ai>=2.31.6",
    "jupyterlab-git>=0.51.2",
    "langchain-openai>=0.3.30",
    "matplotlib>=3.10.5",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "pip>=25.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "sympy>=1.14.0",
    "xarray>=2025.8.0",
    "yfinance>=0.2.65",
]
